name:     progress-meter
version:  0.1.0
category: 
synopsis: 

maintainer:   Ertugrul Söylemez <esz@posteo.de>
author:       Ertugrul Söylemez <esz@posteo.de>
copyright:    Copyright 2017 Ertugrul Söylemez
homepage:     https://github.com/esoeylemez/progress-meter
bug-reports:  https://github.com/esoeylemez/progress-meter/issues
license:      BSD3
license-file: LICENSE

description: 

build-type:         Simple
cabal-version:      >= 1.10
extra-source-files: CHANGELOG.md README.md

source-repository head
    type:     git
    location: https://github.com/esoeylemez/progress-meter.git

flag Devel
    default: False
    description: Development dependencies
    manual: True

flag Examples
    default: False
    description: Build the example programs
    manual: True


library
    build-depends:
        base >= 4.8 && < 4.10
    if flag(devel)
        build-depends: rapid
    default-language: Haskell2010
    ghc-options: -W
    hs-source-dirs: src
    exposed-modules:

executable progress-meter
    build-depends:
        base >= 4.8 && < 4.10,
        progress-meter
    default-language: Haskell2010
    ghc-options: -W -threaded
    hs-source-dirs: programs
    main-is: progress-meter.hs

executable progress-meter-experiment
    if flag(examples)
        build-depends:
            base >= 4.8 && < 4.10,
            progress-meter
    else
        buildable: False
    default-language: Haskell2010
    ghc-options: -W -threaded
    hs-source-dirs: examples
    main-is: experiment.hs

test-suite tests
    type: exitcode-stdio-1.0
    build-depends:
        base >= 4.8 && < 4.10,
        QuickCheck,
        tasty,
        tasty-quickcheck,
        progress-meter
    default-language: Haskell2010
    ghc-options: -W -threaded -with-rtsopts=-N
    hs-source-dirs: tests
    main-is: Props.hs
